# dadly

./: .gitignore  BACKGROUND.promt  CHANGELOG.md  CODING_STANDARDS.md  DEVELOPMENT.md  INFRASTRUCTURE.md  README.md  pyproject.toml  requirements.txt
app/: main.py
backend/: __init__.py  config.py  main.py
backend/api/: chat.py
backend/services/: chat_service.py
